# westfall-2006

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: species_groupings.csv
figures/: poplar_height_vs_diameter.ipynb  poplar_height_vs_diameter.py
tests/: test_predict_height.py
westfall_2006/: __init__.py  model.py  tables.py
westfall_2006/data/: coefficients.csv
